Update index.html helper

--- a/CSS Bootcamo Day-3/index.html
+++ b/CSS Bootcamo Day-3/index.html
@@ -21,6 +21,7 @@
             <p>Any week</p>
             <div class="vl"></div>
             <p>Add guests</p>
+            <p>New guests</p>
             <img src="search.png" alt="" class="search-icon">
         </div>
         <div class="user">
